--- a/src/main/webapp/activity.html
+++ b/src/main/webapp/activity.html
@@ -92,10 +92,8 @@
 										<!-- Collect the nav links, forms, and other content for toggling -->
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
-												<li class="active"><a href="index.html">主页</a></li>
-												<li><a href="#new">最新活动</a></li>
-												<li><a href="#about">聚慧大讲堂</a></li>
-
+												<li><a href="index.html">主页</a></li>
+												<li class="active"><a href="#new">最新活动</a></li>
 											</ul>
 										</div>
 
