--- a/src/main/webapp/service8.html
+++ b/src/main/webapp/service8.html
@@ -205,10 +205,10 @@
 						<span class="icon">
 							<i class="icon-eye"></i>
 						</span>
-                               <h1>Regular Acting</h1>
-                               <h3>English Corner <span style="color:blueviolet;font-style:italic;font-size:16px;">on Wednesday</span> </h3>
-                               <h3>Oriented <span style="color:blueviolet;font-style:italic;font-size:16px;">on Thursday</span> </h3>
-                               <h3>ToastMaster <span style="color:blueviolet;font-style:italic;font-size:16px;">on  Friday</span> </h3>
+                               <h1>Regular Activities</h1>
+                               <h3>English corner program <span style="color:blueviolet;font-style:italic;font-size:16px;">on Wednesday</span> </h3>
+                               <h3>New joiner English orientation <span style="color:blueviolet;font-style:italic;font-size:16px;">on Thursday</span> </h3>
+                               <h3>Toastmasters international club <span style="color:blueviolet;font-style:italic;font-size:16px;">on  Friday</span> </h3>
                                <p><a href="#">Learn more</a></p>
                            </div>
                        </div>
@@ -217,10 +217,10 @@
 						<span class="icon">
 							<i class="icon-command"></i>
 						</span>
-                               <h1>Translation Support</h1>
-                               <h3>XXX</h3>
-                               <h3>XXX</h3>
-                               <h3>XXX</h3>
+                               <h1>Service Consulting</h1>
+                               <h3>International certification program</h3>
+                               <h3>Global business support</h3>
+                               <h3>Document translation</h3>
                                <p><a href="#">Learn more</a></p>
                            </div>
                        </div>
@@ -528,40 +528,39 @@
                     <div class="row animate-box row-pb-md">
                         <div class="col-md-8 col-md-offset-2 text-left fh5co-heading">
                             <span>You deserved happiness</span>
-                            <h2>Happy Clients</h2>
-                            <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                            <h2>Happy Moments</h2>
+                            <p> hhhjj</p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 animate-box">
-                            <div class="testimonial">
-                                <blockquote>
-                                    <p>&ldquo;Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.&rdquo;</p>
-                                    <p class="author"> <img src="images/person1.jpg" alt="Free HTML5 Bootstrap Template by gettemplates.co"> <cite>&mdash; Mike Adam</cite></p>
-                                </blockquote>
+                        <div class="col-md-6 ">
+                            <div class="">
+
+                                    <p></p>
+                                    <p class="author"> <img src="images/aa.jpg" alt=""> </p>
+
                             </div>
 
-                            <div class="testimonial fh5co-selected">
-                                <blockquote>
-                                    <p>&ldquo;Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius. Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.&rdquo;</p>
-                                    <p class="author"><img src="images/person2.jpg" alt="Free HTML5 Bootstrap Template by gettemplates.co"> <cite>&mdash; Eric Miller</cite></p>
-                                </blockquote>
+                            <div class="">
+
+                                    <p></p>
+                                    <p class="author"><img src="images/cc.jpg" alt="">
+
                             </div>
                         </div>
 
-                        <div class="col-md-6 animate-box">
-                            <div class="testimonial fh5co-selected">
-                                <blockquote>
-                                    <p>&ldquo;Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius. Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.&rdquo;</p>
-                                    <p class="author"><img src="images/person3.jpg" alt="Free HTML5 Bootstrap Template by gettemplates.co"> <cite>&mdash; Eric Miller</cite></p>
+                        <div class="col-md-6 ">
+                            <div class=" fh5co-selected">
+
+                                    <p></p>
+                                <p class="author"><img src="images/bb.jpg" alt="Free HTML5 Bootstrap Template by gettemplates.co"></p>
                                 </blockquote>
                             </div>
 
-                            <div class="testimonial">
-                                <blockquote>
-                                    <p>&ldquo;Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.&rdquo;</p>
-                                    <p class="author"><img src="images/person1.jpg" alt="Free HTML5 Bootstrap Template by gettemplates.co"> <cite>&mdash; Mike Adam</cite></p>
-                                </blockquote>
+                            <div class="">
+
+                                    <p></p>
+                                    <p class="author"><img src="images/dd.jpg" alt="Free HTML5 Bootstrap Template by gettemplates.co"> <cite>&mdash; Mike Adam</cite></p>
                             </div>
 
                         </div>
@@ -650,8 +649,10 @@
                 <h3>Project Description</h3>
                 <div class="row">
                     <div class="col-md-6">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium, ut unde. Quae sed, incidunt laudantium nesciunt, optio corporis quod earum pariatur omnis illo saepe numquam suscipit, nemo placeat dignissimos eius mollitia et quas officia doloremque ipsum labore rem deserunt vero! Magnam totam delectus accusantium voluptas et, tempora quos atque, fugiat, obcaecati voluptatibus commodi illo voluptates dolore nemo quo soluta quis.</p>
-                        <p>Molestiae sed enim laboriosam atque delectus voluptates rerum nostrum sapiente obcaecati molestias quasi optio exercitationem, voluptate quis consequatur libero incidunt, in, quod. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nobis officiis, autem earum tenetur quidem. Quae non dicta earum. Ipsum autem eaque cum dolor placeat corporis quisquam dolorum at nesciunt.</p>
+                        <p>需求描述:为更好的服务客户，提高组织的综合实力和竞争力，某交付部提出要强化初级员工英语读写能力和中高级员工口语表达能力的国际化赋能需求，其中读写部分报名30人，赋能方向为商务邮件写作和日常职场书面表达；口语部分报名20人，赋能方向为项目会议处理、跨文化交际学习、公共演讲、和商务接待等。以下是该交付部的国际化赋能方案设计：</p>
+                        <p>Written part:</p>
+                        <p></p>
+                        <p></p>
                     </div>
                     <div class="col-md-6">
                         <img src="images/portfolio-1.jpg" alt="">
