--- a/src/main/webapp/service2.html
+++ b/src/main/webapp/service2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!-->
-<html lang="en">
+<html lang="en" xmlns:float="http://www.w3.org/1999/xhtml">
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
@@ -40,7 +40,7 @@
 		<div class="scrollToTop"><i class="icon-up-open-big"></i></div>
 
 		<!-- header start -->
-		<!-- ================ --> 
+		<!-- ================ -->
 		<header class="header fixed clearfix navbar navbar-fixed-top">
 			<div class="container">
 				<div class="row">
@@ -142,131 +142,202 @@
 
 		<div class="section" id="">
 			<div class="container">
-				<h1 class="text-center title" >业务培训服务目录</h1>
-				<div class="separator"></div>
 
 				<div class="row">
-					<!-- <div class="col-md-6">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi adipisci illo, voluptatum ipsam fuga error commodi architecto, laudantium culpa tenetur at id, beatae placeat deserunt iure quas voluptas fugit eveniet.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ducimus explicabo quibusdam temporibus deserunt doloremque pariatur ea, animi a. Delectus similique atque eligendi, enim vel reiciendis deleniti neque aliquid, sit?</p>
-                        <p>Vitae dolores quam magnam accusantium nam, voluptatibus expedita delectus, dolorum odio magni ut nemo nihil ex earum pariatur molestias velit eveniet, facere autem saepe aut. Ut minima itaque porro facere. Cumque vitae autem, dignissimos molestiae necessitatibus culpa aliquam deleniti soluta sunt voluptatibus tenetur, unde dolorem eligendi doloribus quibusdam facere totam. Possimus atque deserunt numquam aliquam magnam, facilis officiis illo alias ipsa voluptas laborum, praesentium eveniet nobis velit voluptatem odio eligendi, corporis et iste distinctio! Repellendus, id, ad.</p>
-                    </div> -->
-					<div class="col-md-12">
-						<div class="panel-group" id="trainingAccordion" role="tablist" aria-multiselectable="true">
+					<div class="section" id="new">
+						<div class="container">
+							<h1 class="text-center title" id="portfolio">业务服务</h1>
+							<div class="separator"></div>
+							<p class="lead text-center">欢迎大家了解更多的银行业务。</p>
+							<br>
+							<div class="row object-non-visible animated object-visible fadeIn" data-animation-effect="fadeIn">
+								<div class="col-md-12">
 
-							<div class="panel panel-default">
-								<div class="panel-heading" role="tab" id="trainingHeading8">
-									<h4 class="panel-title">
-										<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse8" aria-expanded="true" aria-controls="trainingCollapse8">
-											业务知识
-										</a>
-									</h4>
-								</div>
-								<div id="trainingCollapse8" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading8">
-									<div class="panel-body">
-										<div class="table-responsive">
-											<table class="table">
-												<caption></caption>
-												<thead>
-												<tr>
+									<!-- isotope filters start -->
+									<!-- isotope filters end -->
 
-													<th>课程名称</th>
-													<th>培训讲师</th>
-													<th>提供交付部</th>
-													<th>课程时长</th>
-													<th>内容简介</th>
-												</thead>
-												<tbody>
-												<tr>
-													<td>How to present a object phase1</td>
+									<!-- portfolio items start -->
+									<div class="isotope-container row grid-space-20" style="position: relative; height: 791px;">
+										<div class="col-sm-6 col-md-3 isotope-item web-design" style="position: absolute; left: 0px; top: 0px;">
+											<div class="image-box">
+												<div class="overlay-container">
+													<img src="./业务服务_files/RBWM.jpg" alt="">
+													<a class="overlay" data-toggle="modal" data-target="#project-1">
+														<i class="fa fa-search-plus"></i>
+													</a>
+												</div>
+												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-1">零售银行</a>
+											</div>
+											<!-- Modal -->
 
-													<td>Vincent</td>
-													<td>BI</td>
-													<td> </td>
-													<td> </td>
-												</tr>
-
-												<tr>
-													<td>"What is BI" Knowledge sharing from CMB</td>
-
-													<td>Xavier</td>
-													<td>BI</td>
-													<td> </td>
-													<td> </td>
-												</tr>
-												<tr>
-													<td>CCD System Flow For EDW</td>
-													<td>Xavier</td>
-													<td>BI</td>
-													<td></td>
-													<td></td></tr>
-												<tr>
-													<td>Insurance Basic Knowledge</td>
-													<td>Angela</td>
-													<td>BI</td>
-													<td></td>
-													<td></td></tr>
-												<tr>
-													<td>Banking Bussiness Knowledge</td>
-													<td>Daisy</td>
-													<td>BI</td>
-													<td></td>
-													<td></td>
-												</tr>
-												<tr>
-													<td>HSBC info Sharing</td>
-													<td>Angela</td>
-													<td>BI</td>
-													<td></td>
-													<td></td>
-												</tr>
-												<tr>
-													<td>关于OCP认证考试的那些事</td>
-													<td>Kitty</td>
-													<td>BI</td>
-													<td></td>
-													<td></td>
-												</tr>
-												<tr>
-													<td>Time value of Money sharing</td>
-													<td>Alice Jing</td>
-													<td>BI</td>
-													<td></td>
-													<td></td>
-												</tr>
-												<tr>
-													<td>Global Source Sharing</td>
-													<td>Manadm</td>
-													<td>BI</td>
-													<td></td>
-													<td></td>
-												</tr>
-												<tr>
-													<td>Practical Skills</td>
-													<td>Scorpic</td>
-													<td>BI</td>
-													<td></td>
-													<td></td>
-												</tr>
-												<tr>
-													<td>DRR Flow Sharing</td>
-													<td>Mark</td>
-													<td>BI</td>
-													<td></td>
-													<td></td>
-												</tr>
-
-												</tbody>
-											</table>
+											<!-- Modal end -->
 										</div>
+
+										<div class="col-sm-6 col-md-3 isotope-item app-development" style="position: absolute; left: 292px; top: 0px;">
+											<div class="image-box">
+												<div class="overlay-container">
+													<img src="./业务服务_files/CMB.jpg" alt="">
+													<a class="overlay" data-toggle="modal" data-target="#project-2">
+														<i class="fa fa-search-plus"></i>
+													</a>
+												</div>
+												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-2">商业银行</a>
+											</div>
+											<!-- Modal -->
+
+											<!-- Modal end -->
+										</div>
+
+										<div class="col-sm-6 col-md-3 isotope-item web-design" style="position: absolute; left: 585px; top: 0px;">
+											<div class="image-box">
+												<div class="overlay-container">
+													<img src="./业务服务_files/GPB.jpg" alt="">
+													<a class="overlay" data-toggle="modal" data-target="#project-3">
+														<i class="fa fa-search-plus"></i>
+													</a>
+												</div>
+												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-3">私人银行</a>
+											</div>
+											<!-- Modal -->
+
+											<!-- Modal end -->
+										</div>
+
+										<div class="col-sm-6 col-md-3 isotope-item site-building" style="position: absolute; left: 877px; top: 0px;">
+											<div class="image-box">
+												<div class="overlay-container">
+													<img src="./业务服务_files/GBM.jpg" alt="">
+													<a class="overlay" data-toggle="modal" data-target="#project-4">
+														<i class="fa fa-search-plus"></i>
+													</a>
+												</div>
+												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-4">全球投资银行</a>
+											</div>
+											<!-- Modal -->
+
+											<!-- Modal end -->
+										</div>
+
 									</div>
+									<!-- portfolio items end -->
+
 								</div>
 							</div>
-
 						</div>
 					</div>
 				</div>
+
+		    </div>
 		</div>
+
+		<div class="modal fade" id="project-1" tabindex="-1" role="dialog" aria-labelledby="project-1-label" aria-hidden="true">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">x</span><span class="sr-only">Close</span></button>
+						<h4 class="modal-title" id="project-1-label">零售银行</h4>
+					</div>
+					<div class="modal-body">
+						<h3>业务范围</h3>
+						<div class="row">
+							<div class="col-md-6">
+								<p>零售银行业务不是某一项业务的简称，而是许多业务的总称，它有着广泛的业务领域，既可以是传统银行业务，也可以是新业务；既可以是资产业务，也可以是负债业务、中间业务、网上银行业务等等。</p>
+								<p>负债业务：活期存款，定期存款，储蓄存款，信用卡存款，金融债券，大额可转让定期存单。</P>
+								<p>资产业务：消费者信贷(包括汽车贷款、住房贷款、耐用消费品贷款等)，信用卡融资或透支等。</p>
+								<p>中间业务：个人汇兑结算、个人信托、个人租赁、个人保管箱、个人票据托收、代理支付、个人咨询及理财业务、个人外汇买卖及外币兑换业务等 </p>
+							</div>
+							<div class="col-md-6">
+								<img src="./业务服务_files/Mortgage.jpg" alt="">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<img src="./业务服务_files/wechatBanking.jpg" width="400" height="300" alt="">
+							</div>
+							<div class="col-md-6">
+								<img src="./业务服务_files/VTM.jpg" width="400" height="300" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal fade" id="project-2" tabindex="-1" role="dialog" aria-labelledby="project-2-label" aria-hidden="true">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+						<h4 class="modal-title" id="project-2-label">商业银行</h4>
+					</div>
+					<div class="modal-body">
+						<h3>业务范围</h3>
+						<div class="row">
+							<div class="col-md-8">
+								<p>商业银行的概念是区分于中央银行和投资银行的，是一个以营利为目的，以多种金融负债筹集资金，多种金融资产为经营对象，具有信用创造功能的金融机构。最初使用“商业银行”这个概念，是因为这类银行在发展初期，只承做“商业”短期放贷业务。放款期限一般不超过一年，放款对象一般为商人和进出口贸易商。人们将这种主要吸收短期存款，发放短期商业贷款为基本业务的银行，称为商业银行。</p>
+								<p></p>
+							</div>
+							<div class="col-md-4">
+								<img src="./业务服务_files/CMB.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal fade" id="project-3" tabindex="-1" role="dialog" aria-labelledby="project-3-label" aria-hidden="true" style="display: none;">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+						<h4 class="modal-title" id="project-3-label">个人银行</h4>
+					</div>
+					<div class="modal-body">
+						<h3>业务范围</h3>
+						<div class="row">
+							<div class="col-md-8">
+								<p>私人银行（PrivateBanking），是银行服务的一种，专门面向富有阶层，为富豪们提供个人财产投资与管理，一般需要拥有至少100万美元以上的流动资产才可在较大型的国际金融公司或银行中申请开设此类服务。私人银行服务最主要的是资产管理，规划投资，根据客户需要提供特殊服务，也可通过设立离岸公司、家族信托基金等方式为顾客节省税务和金融交易成本。该种服务的年均利润率可达到15%，远高于其他金融服务</p>
+							</div>
+							<div class="col-md-4">
+								<img src="./业务服务_files/GPB.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal fade" id="project-4" tabindex="-1" role="dialog" aria-labelledby="project-4-label" aria-hidden="true">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+						<h4 class="modal-title" id="project-4-label">全球投资银行</h4>
+					</div>
+					<div class="modal-body">
+						<h3>业务范围</h3>
+						<div class="row">
+							<div class="col-md-8">
+								投资银行( investment banking,corporate finance）是主要从事证券发行、承销、交易、企业重组、兼并与收购、投资分析、风险投资、项目融资等业务的非银行金融机构，是资本市场上的主要金融中介。是最典型的投资性金融机构，一般认为，投资银行是在资本市场上为企业发行债券、股票，筹集长期资金提供中介服务的金融机构，主要从事证券承销、公司购并与资产重组、公司理财、基金管理等业务。其基本特征是综合经营资本市场业务。证券投资的分析方法主要有如下三种：基本分析、技术分析、演化分析，其中基本分析主要应用于投资标的物的选择上，技术分析和演化分析则主要应用于具体投资操作的时间和空间判断上，作为提高投资分析有效性和可靠性的重要补充。
+
+							</div>
+							<div class="col-md-4">
+								<img src="./业务服务_files/GBM.jpg">
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- JavaScript files placed at the end of the document so the pages load faster
 		================================================== -->
