--- a/src/main/webapp/service3.html
+++ b/src/main/webapp/service3.html
@@ -96,7 +96,7 @@
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
 												<li><a href="index.html">主页</a></li>
-												<li><a href="service.html">培训</a></li>
+
 												<li><a href="">|</a></li>
 												<li><a href="service1.html">技术</a></li>
 												<li><a href="service2.html">业务</a></li>
@@ -134,7 +134,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 							<h1 class="text-center"><span>能力中心</span>敏捷</h1>
-							<p class="lead">建立敏捷附能能力，提供敏捷咨询，建立Devops--全站工具附能能力，以达到共享资源，交流沟通的目的。</p>
+							<p class="lead">建立敏捷赋能能力，提供敏捷咨询，建立Devops--全站工具赋能能力，以达到共享资源，交流沟通的目的。</p>
 						</div>
 					</div>
 				</div>
@@ -777,7 +777,7 @@
 								<div class="panel-heading" role="tab" id="trainingHeading5">
 									<h4 class="panel-title">
 										<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse5" aria-expanded="false" aria-controls="trainingCollapse5">
-											DevOps(CI全战工具附能)
+											DevOps(CI全站工具附能)
 										</a>
 									</h4>
 								</div>
