--- a/src/main/webapp/service3.html
+++ b/src/main/webapp/service3.html
@@ -134,7 +134,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 							<h1 class="text-center"><span>能力中心</span>敏捷</h1>
-							<p class="lead">建立敏捷赋能能力，提供敏捷咨询，建立Devops--全站工具赋能能力，以达到共享资源，交流沟通的目的。</p>
+							<p class="lead">建立敏捷赋能能力，提供敏捷咨询，建立Devops--全栈工具赋能能力，以达到共享资源，交流沟通的目的。</p>
 						</div>
 					</div>
 				</div>
@@ -394,7 +394,7 @@
 												<div class="row">
 													<div class="col-md-6">
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;TDD是测试驱动开发（Test-Driven Development）的英文简称，是敏捷开发中的一项核心实践和技术，也是一种设计方法论。TDD的原理是在开发功能代码之前，先编写单元测试用例代码，测试代码确定需要编写什么产品代码</p>
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的TDD服务：敏捷服务目录--Devops全站工具--工具附能--TDD</p>
+														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的TDD服务：敏捷服务目录--Devops全栈工具--工具赋能--TDD</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/tdd.jpg" alt="">
@@ -436,7 +436,7 @@
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;行为驱动开发（Behaviour-Driven-Development)简写BDD
 															BDD是TDD的一种演化，作为一种设计方法，可以有效的改善设计，并在系统演化过程中为团队指明前进方向</p>
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;行为驱动开发的根基是一种“通用语言”。这种通用语言同时被客户和开发者用来定义系统的行为。由于客户和开发者使用同一种语言来描述同一个系统， 可以最大程度避免表达不一致带来的问题.</p>
-														<p>在如下渠道你可以获得专业BDD服务：敏捷服务目录--Devops全站工具--工具附能--BDD</p>
+														<p>在如下渠道你可以获得专业BDD服务：敏捷服务目录--Devops全栈工具--工具赋能--BDD</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/bdd.jpg" alt="">
@@ -476,7 +476,7 @@
 												<div class="row">
 													<div class="col-md-6">
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;持续集成是做好敏捷开发必不可少的实践，为期两天的实践课程，讲师结合自己多年在不同类型项目和公司中实施持续集成的经验，为大家详细讲解持续集成中涉及的各个专题，分享一手的宝贵经验，为大家在自己的公司中建立或改进构建、测试和部署设施提供可行的办法。</p>
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的集成环境搭建信息：敏捷服务目录--Devops全站工具--工具附能</p>
+														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的集成环境搭建信息：敏捷服务目录--Devops全栈工具--工具赋能</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/ci.jpg" alt="">
@@ -501,7 +501,7 @@
 											<span>DEVOPS</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-11">Devops全站工具</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-11">Devops全栈工具</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-11" tabindex="-1" role="dialog" aria-labelledby="project-11-label" aria-hidden="true">
@@ -509,14 +509,14 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-11-label">Devops全站工具</h4>
+												<h4 class="modal-title" id="project-11-label">Devops全栈工具</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Devops全站工具</h3>
+												<h3>Devops全栈工具</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;如果你想知道Devops需要什么工具，如何使用，</p>
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的全站工具附能：敏捷服务目录--Devops全站工具--工具附能</p>
+														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的全栈工具赋能：敏捷服务目录--Devops全栈工具--工具赋能</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/devops.jpg" alt="">
@@ -777,7 +777,7 @@
 								<div class="panel-heading" role="tab" id="trainingHeading5">
 									<h4 class="panel-title">
 										<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse5" aria-expanded="false" aria-controls="trainingCollapse5">
-											DevOps(CI全站工具附能)
+											DevOps(CI全栈工具赋能)
 										</a>
 									</h4>
 								</div>
@@ -789,7 +789,7 @@
 												<thead>
 												<tr>
 
-													<th>工具附能</th>
+													<th>工具赋能</th>
 					
 												</thead>
 												<tbody>
