--- a/src/main/webapp/activity.html
+++ b/src/main/webapp/activity.html
@@ -188,11 +188,11 @@
 												<h4 class="modal-title" id="project-1-label">袁家村一日游</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>春暖花开，正是出游的好时节！为了丰富了员工的业余文化生活，增进了员工之间的相互交流与沟通，激发工作热情，增强了团队意识，部门组织员工周末到袁家村进行了放松。</p>
-														<p>本次出游活动非常成功，大家都表示在紧张的工作之余，出游活动陶冶了身心，锻炼了身体，增加了交流，非常开心。相信经过这次活动，大家将会以更加饱满的热情投入到工作中去！.</p>
+														<p>春暖花开，正是出游的好时节！为了丰富员工的业余文化生活，增进员工之间的相互交流与沟通，激发工作热情，增强团队意识，部门组织员工周末到袁家村进行了放松。</p>
+														<p>本次出游活动非常成功，大家都表示在紧张的工作之余，出游活动陶冶了身心，锻炼了身体，增加了交流，非常开心。相信经过这次活动，大家将会以更加饱满的热情投入到工作中去！</p>
 													<p>The outing activity was very successful, everybody said in the intense work, travel activities cultivate the body and mind, exercise the body, increase the communication, very happy.Believe that after this activity, we will be in a more full enthusiasm into work!.</p>
 													</div>
 													<div class="col-md-6">
@@ -229,10 +229,10 @@
 												<h4 class="modal-title" id="project-2-label">"三八"系列活动</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>此次活动由部门男同事组织，全体女同胞参与其中。不仅响应了浓烈的节日气氛，还缓解了紧张繁忙的工作压力，更重要的是促进了友谊，加深了感情，使各位女同事充分感受到了节日带给她们的喜悦和快乐。真正为女员工身心健康办了实事、办了好事，最大限度地提高广大女员工的生活质量和幸福感，激励大家以更加饱满的热情、最佳的工作状态创造新的业绩，极大地增强了部门的凝聚力和向心力。</p>
+														<p>此次活动由部门男同事组织，全体女同胞参与其中。不仅响应了浓烈的节日气氛，还缓解了紧张繁忙的工作压力，更重要的是促进了友谊，加深了感情，使各位女同事充分感受到了节日带给她们的喜悦和快乐。真正为女员工身心健康办了实事、办了好事，提高了广大女员工的生活质量和幸福感，激励大家以更加饱满的热情、最佳的工作状态创造新的业绩，极大地增强了部门的凝聚力和向心力。</p>
 														<p>This activity organized by department male colleagues and all the women involved.Not only respond to the strong festive atmosphere, also eased the tension busy work pressure, more important is to promote the friendship, deepen the feelings, make your female colleagues fully felt the festival will bring them joy and happiness.True for female employees health of body and mind do the practical work, doing something good, to maximize the female staff's quality of life and well-being, motivate people to work more full of enthusiasm, the best state to create new achievements, greatly enhance the cohesion and centripetal force.</p>
 													</div>
 													<div class="col-md-6">
@@ -266,15 +266,15 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-3-label">Project Title</h4>
+												<h4 class="modal-title" id="project-3-label">English Corner</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>Have you ever felt it’s difficult to talk with native speakers proactively? Do you want to communicate with your colleagues or foreign customers in English without boundaries? Come to English corner and show yourself confidently!</p>
 														<p>Here provides you infinite opportunities to meet someone new and have a good learning experience.</p>
-														<p>你有没有觉得与母语者主动交谈很困难？你想与你的同事或外国客户用英语沟通没有边界吗？来到英语角，自信地展现自己！这里为您提供无限的机会，以满足新的人，有一个良好的学习经验。</p>
+														<p>你有没有觉得在与外国人主动交谈方面存在困难？你想与你的同事或外国客户无障碍沟通吗？来英语角吧，自信地展现自己，给自己一个交友、学习的机会。</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/20.jpg" alt="">
@@ -310,7 +310,7 @@
 												<h4 class="modal-title" id="project-4-label">敏捷经验交流</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>敏捷开发是由一些业界专家针对一些企业现状提出了一些让软件开发团队具有快速工作、响应变化能力的价值观和原则，并于2001初成立了敏捷联盟。他们正在通过亲身实践以及帮助他人实践，揭示更好的软件开发方法。简单的说，敏捷开发是一种以人为核心、迭代、循序渐进的开发方法拥抱变化的开发流程。</p>
@@ -350,11 +350,11 @@
 												<h4 class="modal-title" id="project-5-label">Internet Banking Training</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>With the purpose of enhancing staff’s English level of each department, we set targeted courses including written and oral parts. You can choose the suitable scenarios in our professional internationalization solutions, where to learn and enjoy the customized English lessons.</p>
-													    <p>为了提高每个部门的英语水平，我们设立了有针对性的课程，包括书面和口头部分。您可以选择合适的方案在我们的专业国际化解决方案，在那里学习和享受定制的英语课程。</p>
+													    <p>为了提高每个部门的英语水平，我们设立了有针对性的课程，包括书面和口头部分。您可以在我们的专业国际化解决方案中选择适合自己的课程，学习和享受私人定制英语课程。</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/网银2.jpg" alt="">
@@ -390,10 +390,10 @@
 												<h4 class="modal-title" id="project-6-label">"Pbox"启动会</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>3月20日，我部门举办了pbox的启动会。在轻松愉悦的氛围下，大家发变了各自的看法，提出了不同形式的创新。这一次，通过多人合作、敏捷的模式提供了一个完全自主的创作环境。大机开心的一起合影，希望永远留住这些美好瞬间。 </p>
+														<p>3月20日，我部门举办了pbox的启动会。在轻松愉悦的氛围下，大家发表了各自的看法，提出了不同形式的创新方案。这一次，通过多人合作、敏捷的模式提供了一个完全自主的创作环境。大家开心的一起合影，希望永远留住这些美好瞬间。 </p>
 														<p>In March 20th, my department held a pbox startup. In a relaxed atmosphere, we have changed their views, put forward different forms of innovation. This time, through a multi player, agile model provides a completely independent creative environment. Big machine happy together photo, I hope to keep these beautiful moments.</p>
 													</div>
 													<div class="col-md-6">
@@ -430,7 +430,7 @@
 												<h4 class="modal-title" id="project-7-label">CI集成</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>CI作为软件开发的最佳实践已经被很多的团队所采纳。正如Martin Fowler所说，CI要求开发团队能够频繁地集成开发和测试工作，以便尽早发现问题，减少项目风险。</p>
@@ -470,11 +470,11 @@
 												<h4 class="modal-title" id="project-8-label">新员工培训</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>This is a basic and mandatory English training on each Thursday for the new staff. Your capabilities of self introduction and email writing will be improved after the training. Besides, there are still lots of office English tips for your daily work communication.</p>
-													    <p>这是一个基本的和强制性的英语培训，每个星期四的新员工。你的自我介绍和邮件写作能力会在训练后得到改善。此外，还有很多日常工作沟通的办公室英语小贴士。</p>
+													    <p>每周四的新员工培训是一项基本且必要的英语培训活动，活动旨在提高自我介绍和邮件写作能力。此外，还有很多日常工作沟通的办公室英语小贴士提供给大家。</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/新员工培训.jpg" alt="">
@@ -510,11 +510,11 @@
 												<h4 class="modal-title" id="project-9-label">Toastmaster</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>Do you want to become a confident public speaker and strong leader? If so, Toastmasters is the best place for you. We provide a supportive and positive learning experience in which all members are empowered to develop English communication and leadership skills, resulting in greater self-confidence and personal growth.</p>
-													    <p>你想成为一个自信的演说家和强有力的领导者吗？如果是这样的话，演讲是你最好的地方。我们提供一个支持和积极的学习经验，其中所有成员都有权发展英语沟通和领导能力，从而产生更大的自信和个人成长。</p>
+													    <p>想成为一个自信的演说家或者优秀的领导者吗？那么演说家俱乐部是你最好的选择。在这里你将获得更多的学习经验，演说家俱乐部的所有成员都有机会进行英语沟通和团队领导，从而产生更大的自信和加速个人成长。</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/toast1.jpg" alt="">
@@ -550,12 +550,12 @@
 												<h4 class="modal-title" id="project-10-label">集百家之长，成一家之言，寻智慧之巅</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>来自不同团队的达人将通过这个平台与我们分享他们的技术能力</p>
 														<p>来自不同部门的卓越团队将通过这个平台向我们讲述他们的故事</p>
-														<p>来自外部的业务专家将通过这个平台向我们介绍技术发展趋势</p>
+														<p>来自外部的技术专家将通过这个平台向我们介绍技术发展趋势</p>
 														<p>Talents from different teams share their knowledge and technique here.</p>
 														<p>Excellent project teams from various departments share their good practices and experiences here.</p>
 														<p>External Subject Matter Experts (SME) are invited to share industry business and technology trend here. </p>
@@ -594,7 +594,7 @@
 												<h4 class="modal-title" id="project-11-label">敏捷经验交流</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>我们首先要做的是通过尽早地、持续地交付有价值的软件来使客户满意；</p>
@@ -636,7 +636,7 @@
 												<h4 class="modal-title" id="project-12-label">敏捷经验交流</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Project Description</h3>
+												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>敏捷软件开发是以短周期迭代为核心，包含团队、工作件、管理和技术优秀实践的集合</p>
