--- a/src/main/webapp/service2.html
+++ b/src/main/webapp/service2.html
@@ -132,7 +132,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 							<h1 class="text-center"><span>能力中心</span>业务</h1>
-							<p class="lead">建立起组织自己的培训能力，拉通各个交付部的培训资源，以达到共享资源，交流沟通的目的。</p>
+							<p class="lead">为各个交付部进行业务沉淀提供工具和方法论指导，拉通各个交付部的业务培训资源，以达到共享资源，快速复制业务能力的目的。</p>
 						</div>
 					</div>
 				</div>
