--- a/src/main/webapp/service3.html
+++ b/src/main/webapp/service3.html
@@ -311,7 +311,7 @@
 													<div class="col-md-6">
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;专业的Scrum教练、敏捷开发教练为您提供实效敏捷开发实施辅导，协助您打造团队，提升组织敏捷性，产品开发敏捷性。</p>
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;和团队一起工作是我们最主要的工作方式，我们可以通过多种不同的工作方法评估团队和组织的情况；我们作为团队教练贴身辅导团队、训练关键人员，帮助团队找到最适合他们的流程和实践；我们作为咨询顾问为管理者提供解决棘手问题的最佳解决方案</p>
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的敏捷Coash服务：敏捷服务目录--管理咨询--咨询分类--敏捷Coash</p>
+														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的敏捷Coach服务：敏捷服务目录--管理咨询--咨询分类--敏捷Coach</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/portfolio-12.jpg" alt="">
@@ -352,8 +352,8 @@
 													<div class="col-md-6">
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;认为Scrum很简单，Scrum实施起来形似而神不似
 															认为Scrum和敏捷只是流程和技术的问题，而忽略了团队协作和团队能力的提升
-															只在项目层面实施Scrum，缺乏管理层的关注与支持，忽略了组织结构的调整和优化
-															只在开发团队实施Scrum，没有让需求或业务方参与，缺乏客户协作。/p>
+															旨在项目层面实施Scrum，缺乏管理层的关注与支持，忽略了组织结构的调整和优化
+															旨在开发团队实施Scrum，没有让需求或业务方参与，缺乏客户协作。</p>
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;我们提供敏捷的进阶知识：敏捷服务目录--敏捷管理--敏捷分层</p>
 													</div>
 													<div class="col-md-6">
@@ -475,8 +475,8 @@
 												<h3>集成环境搭建</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;持续集成是做好敏捷开发必不可少的实践，为期两天的实践课程，讲师结合自己多年在不同类型项目和公司中实施持续集成的经验，为大家详细讲解持续集成中涉及的各个专题，分享一手的宝贵经验，为大家在自己的公司中建立或改进构建、测试和部署设施提供可行的办法。</p>
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的集成环境搭建信息：敏捷服务目录--Devops全栈工具--工具赋能</p>
+														<p>&nbsp;持续集成是一种软件开发实践，即团队开发成员经常集成他们的工作，通过每个成员每天至少集成一次，也就意味着每天可能会发生多次集成。每次集成都通过自动化的构建（包括编译，发布，自动化测试）来验证，从而尽早地发现集成错误。</p>
+														<p>&nbsp;在如下渠道你可以获得专业的集成环境搭建信息：敏捷服务目录--Devops全栈工具--工具赋能</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/ci.jpg" alt="">
@@ -515,7 +515,7 @@
 												<h3>Devops全栈工具</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;如果你想知道Devops需要什么工具，如何使用，</p>
+														<p>&nbsp;&nbsp;&nbsp;&nbsp;如果你想知道Devops所需工具以及使用方法，</p>
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;在如下渠道你可以获得专业的全栈工具赋能：敏捷服务目录--Devops全栈工具--工具赋能</p>
 													</div>
 													<div class="col-md-6">
@@ -588,7 +588,7 @@
 												</thead>
 												<tbody>
 												<tr>
-													<td>敏捷的开发流程</td>
+													<td>敏捷开发流程</td>
 													<td></td>
 
 												</tr>
@@ -635,7 +635,7 @@
 
 																			</tr>
 																			<tr>
-																				<td>SCRUM 开发流程</td>
+																				<td>Scrum 开发流程</td>
 
 																			</tr>
 																			<tr>
