--- a/src/main/webapp/service8.html
+++ b/src/main/webapp/service8.html
@@ -135,7 +135,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
                     <h1 class="text-center"><span>能力中心</span>国际化</h1>
-                    <p class="lead">建立起组织自己的培训能力，拉通各个交付部的培训资源，以达到共享资源，交流沟通的目的。</p>
+                    <p class="lead">通过国际化赋能体系运作，使各交付部整体具备良好的跨文化沟通和交流能力，建立全面的国际视野及全球性思维模式，形成较强的全球资源配置能力，提升组织和个人的综合竞争实力。</p>
                 </div>
             </div>
         </div>
